Update styles and add a few extra buttons

--- a/css/style.styl
+++ b/css/style.styl
@@ -1,3 +1,36 @@
-h1
-    color #333
+$font-color = #0d1f43
+
+html
+    font-size 62.5%
+
+body
     font-family helvetica, arial, sans-serif
+    background url(img/broken-plane.jpg)
+    background-size cover
+
+h1
+    font-size 67px
+    font-size 6.7rem
+    text-align center
+    
+.time-display
+    color $font-color
+    font-size 89px
+    font-size 8.9rem
+    text-align center
+    
+.timer-buttons
+    text-align center
+    
+#timer-container
+    margin 0 auto
+
+    
+@media screen and (min-width 390px)
+    .time-display
+        font-size 111px
+        font-size 11.1rem
+    h1
+        font-size 89px
+        font-size 8.
+        text-align left
