Add trasition to clock hands

--- a/css/style.styl
+++ b/css/style.styl
@@ -43,11 +43,13 @@ h1
     width 5px
     height 100px
     background-color $second-hand
+    transition transform 0.1s
     
 .minute-hand
     width 10px
     height 100px
     background-color $minute-hand
+    transition transform 0.1s
 
     
 @media screen and (min-width 390px)
