Show a change when a pomodoro section is complete

--- a/css/style.styl
+++ b/css/style.styl
@@ -1,13 +1,13 @@
 $font-color = #0d1f43
 $second-hand = #d01c1c
-$minute-hand = #41523f
+$minute-hand = #23dded
 
 html
     font-size 62.5%
 
 body
     font-family helvetica, arial, sans-serif
-    background url(img/broken-plane.jpg)
+    background url(img/evening-water.jpg)
     background-size cover
 
 h1
